[gd_scene load_steps=9 format=3 uid="uid://dvigbor1cvnbw"]

[ext_resource type="Script" path="res://objects/disintegratingplatform.gd" id="1_cdr2g"]
[ext_resource type="Texture2D" uid="uid://brrlat8ooauir" path="res://assets/sprites/disintegrate_platform_temp.png" id="2_2cm2g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sup70"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_j5q7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_sax4x"]
resource_name = "disintegrate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_y02h8"]
resource_name = "last_frame"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmqiv"]
_data = {
"RESET": SubResource("Animation_j5q7v"),
"disintegrate": SubResource("Animation_sax4x"),
"last_frame": SubResource("Animation_y02h8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2f36"]
size = Vector2(16, 2)

[node name="DisintegratingPlatform" type="StaticBody2D"]
script = ExtResource("1_cdr2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sup70")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2cm2g")
hframes = 5

[node name="LastFrame" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_2cm2g")
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wmqiv")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_h2f36")

[node name="Timer" type="Timer" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
